--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/openshift/openshift-ops
+package: github.com/fahlmant/go-k8s
 import:
 - package: k8s.io/client-go
   version: kubernetes-1.10.6
